# anafi_sim

./: .gitmodules  README.md  requirements.txt  ros_packages_list.txt
experiments_evaluation/: plot.py  plot_moveto.py  plot_static_wp_comparison.py  tracking_eval.py  (+1 more)
sphinx_gazebo_ws/src/airship_simulation/blimp_description/: CMakeLists.txt  package.xml
sphinx_gazebo_ws/src/airship_simulation/blimp_description/launch/: blimp_gcs_wind.launch  sphinx_blimp_gcs_wind.launch
sphinx_gazebo_ws/src/airship_simulation/blimp_description/meshes/docking/: blimp_obstacle_mesh.dae  ellipsoid_hull.blend  ellipsoid_hull.dae  sphere.blend  sphere.blend1  sphere.dae  sphere.stl  sphere_blender.dae
sphinx_gazebo_ws/src/airship_simulation/blimp_description/meshes/docking/Archive (2)/: cube_with_apriltags.dae
sphinx_gazebo_ws/src/airship_simulation/blimp_description/meshes/docking/archive/: cube_with_apriltags.blend  cube_with_apriltags.dae
sphinx_gazebo_ws/src/airship_simulation/blimp_description/meshes/docking/new_dp_dae/: new_dp.dae
sphinx_gazebo_ws/src/airship_simulation/blimp_description/msgs/: WindGust.msg
sphinx_gazebo_ws/src/airship_simulation/blimp_description/urdf/: apriltag_box.xacro  blimp_base.xacro  boxes.xacro  camera.xacro  description_link.xacro  description_plugin.xacro  description_property.xacro  description_sensor.xacro  lighting.xacro  lighting_drafr.xacro  model_xacro.xacro  plugin_component_snippets.xacro  plugin_physics.xacro  plugin_sensors.xacro
sphinx_gazebo_ws/src/airship_simulation/blimp_description/worlds/: basic.world  basic_sphinx.world
(+141 files in other folders)
